(executables
 (libraries mach ctypes)
 (flags
  (:standard -w -32-69-26-27))
 ; Ignore unused code while hacking
 (package mach)
 (public_names pidinfo simple_vmmap)
 (modules pidinfo simple_vmmap))

(rule
 (alias build-c)
 (deps pidinfo.c)
 (target pidinfo_c)
 (action
  (run cc %{deps} -o %{target})))

(rule
 (alias build-c)
 (deps simple_vmmap.c)
 (target simple_vmmap_c)
 (action
  (run cc %{deps} -o %{target})))

(rule
 (alias build-c)
 (deps examine_threads.c)
 (target examine_threads_c)
 (action
  (run cc %{deps} -o %{target})))
